--- a/trunk/source/Makefile
+++ b/trunk/source/Makefile
@@ -1,13 +1,10 @@
 all: cli_weathereport
 
-cli_weathereport: weathereport.o curlget.o
-	gcc weathereport.c curlget.c httpget.c -lcurl -Wall -o cli_weathereport
+cli_weathereport: weathereport.o httpget.o
+	gcc weathereport.c httpget.c -Wall -o cli_weathereport
 
 weathereport.o: weathereport.c
 	gcc -c weathereport.c
-
-curlget.o: curlget.c
-	gcc -c curlget.c
 
 httpget.o: httpget.c
 	gcc -c httpget.c
